@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  uhexen2-1.4.3.ebuild:
+  Fix quotation
+
   06 Apr 2008; Davide Cendron (scen) <scen@gentoo.org>
   -uhexen2-1.4.3_rc1.ebuild, +uhexen2-1.4.3.ebuild:
   Version bump
